# fastapi-database

./: Dockerfile  README.md  pyproject.toml  sql_app.db
src/: actions.py  crud.py  main.py  models.py  schemas.py
